--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </section>
     <!--projects section design -->
     <section class="projects" id="projects">
-        <h2 class="headings">Latest <span>Projcets</span><span class="animate scroll" style="--i:3;"></span></h2>
+        <h2 class="headings">Latest <span>Projects</span><span class="animate scroll" style="--i:3;"></span></h2>
         <div class="projects-container">
             <div class="projects-box">
                 <img src="Assets/Images/projects/stress.png" alt="">
